Change compile target in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "outDir": "dist",
-    "target": "ESNext",
+    "target": "ES6",
     "module": "commonjs",
     "lib": ["ESNext"],
     "strict": true,
